--- a/02-JS and CSS Clock/index.html
+++ b/02-JS and CSS Clock/index.html
@@ -84,19 +84,20 @@
       // add back 90deg to offset default 
       const secondsDegree = ((seconds / 60) * 360) + 90;
       secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
-      console.log(seconds);
+      // console.log(seconds);
 
       const mins = now.getMinutes();
-      const minsDegree = ((mins / 60) * 360) + 90;
+      const minsDegree = ((mins / 60) * 360) + ((seconds/60)*6) + 90;
       minsHand.style.transform = `rotate(${minsDegree}deg);`
 
 
-      const hour = now.getMinutes();
-      const hourDegree = ((mins / 12) * 360) + 90;
+      const hour = now.getHours();
+      const hourDegree = ((mins / 12) * 360) + ((mins/60)*30) + 90;
       hourHand.style.transform = `rotate(${hourDegree}deg);`
     }
     setInterval(setDate, 1000);
     // Challenge: Clock resets at 360 degree --> 0, to avoid the skip on the clock DO: Either tally the degree, directing to keep counting OR temporally take off the transition and reapply at 0. To do this if/else statments to function setDate. 
+    setDate();
   </script>
 </body>
 </html>
