--- a/02-JS and CSS Clock/index.html
+++ b/02-JS and CSS Clock/index.html
@@ -83,7 +83,7 @@
       // number correlating to a degrees
       // add back 90deg to offset default 
       const secondsDegree = ((seconds / 60) * 360) + 90;
-      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+      secondHand.style.transform = `rotate(${secondsDegree}deg)`;
       // console.log(seconds);
 
       const mins = now.getMinutes();
