learned the difference between nodeless and array's, css variables, and using forEach with an eventListener

--- a/03-CSS Variables/index.html
+++ b/03-CSS Variables/index.html
@@ -9,6 +9,7 @@
 
   <div class="controls">
     <label for="spacing">Spacing:</label>
+    <!-- data attribute made data-"sizing"-->
     <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
 
     <label for="blur">Blur:</label>
@@ -21,10 +22,29 @@
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
   <style>
+    /* css variables --> declared on an element */
+    /* root --> highest element [similar to declaring on HTML element] */
+    /*  To use variable declare with var */
+    /* - - (dash dash) is the standard in CSS, in SASS $ (dollar sign)  */
+    :root {
+      --base: #ffc600;
+      --spacing: 10px;
+      --blur: 10px;
+    }
+    img {
+      padding: var(--spacing);
+      background: var(--base);
+      filter: blur(var(--blur));
+    }
+
+    .h1 {
+      color: var(--base);
+    }
 
     /*
       misc styles, nothing to do with CSS variables
     */
+
 
     body {
       text-align: center;
@@ -45,6 +65,17 @@
   </style>
 
   <script>
+    // will return a nodeless not an array 
+    // nodeless we can use forEach to map, in other cases nodeless might need to converted to an array to have more functionality to it. 
+    const inputs = document.querySelectorAll('.controls input');
+
+    function handleUpdate(){
+      const suffix = this.dataset.sizing || '';
+      document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+    }
+
+    inputs.forEach(input => input.addEventListener('change', handleUpdate));
+    inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));
   </script>
 
 </body>
