--- a/03-CSS Variables/index.html
+++ b/03-CSS Variables/index.html
@@ -5,7 +5,8 @@
   <title>Scoped CSS Variables and JS</title>
 </head>
 <body>
-  <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
+  <!-- adding a style rule lower down, the closer one to the element will win  -->
+  <h2 style='--base: #BADA55';>Update CSS Variables with <span class='hl'>JS</span></h2>
 
   <div class="controls">
     <label for="spacing">Spacing:</label>
