--- a/05-Flex Panel Gallery/index.html
+++ b/05-Flex Panel Gallery/index.html
@@ -26,6 +26,7 @@
     .panels {
       min-height: 100vh;
       overflow: hidden;
+      display: flex;
     }
 
     .panel {
@@ -36,6 +37,7 @@
       align-items: center;
       /* Safari transitionend event.propertyName === flex */
       /* Chrome + FF transitionend event.propertyName === flex-grow */
+      /* Below is the transition/ animation as the panels open and close */
       transition:
         font-size 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
         flex 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
@@ -43,7 +45,13 @@
       font-size: 20px;
       background-size: cover;
       background-position: center;
+      flex:1;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      flex-direction: column;
     }
+    /* An element in CSS can be both a flex it and flex container */
 
     .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
     .panel2 { background-image:url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500); }
@@ -56,7 +64,17 @@
       margin: 0;
       width: 100%;
       transition: transform 0.5s;
+      /* border: 1px solid red; */
+      flex: 1 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
+
+    .panel > *:first-child { transform: translateY(-100%); }
+    .panel.open-active > *:first-child { transform: translateY(0); }
+    .panel > *:last-child { transform: translateY(100%); }
+    .panel.open-active > *:last-child { transform: translateY(0); }
 
     .panel p {
       text-transform: uppercase;
@@ -71,6 +89,8 @@
 
     .panel.open {
       font-size: 40px;
+      /* With the class of open it will take 5X the amount of extra room  */
+      flex: 5;
     }
 
   </style>
@@ -105,7 +125,24 @@
   </div>
 
   <script>
+    const panels = document.querySelectorAll('.panel');
 
+    function toggleOpen() {
+      this.classList.toggle('open');
+    }
+
+    function toggleActive (e) {
+      // console.log(e.propertyName);
+      // this.classList.toggle('open-active');
+      // safari = flex, other browers = flex-grow ----> use includes 
+      // if(e.propertyName === 'flex-grow')
+      if(e.propertyName.includes('flex')){
+        this.classList.toggle('open-active');
+      };
+    }
+
+    panels.forEach(panel => panel.addEventListener('click', toggleOpen));
+    panels.forEach(panel => panel.addEventListener('transitionend', toggleActive));
   </script>
 
 
