learned about canvas, globalCompositeOperation, and mother effing hsl

--- a/07-Array Cardio Day 2/index.html
+++ b/07-Array Cardio Day 2/index.html
@@ -65,6 +65,7 @@
     console.log(index);
 
     //comments.splice(index, 1);
+    // With REDUX, we make a new array with the updated comments
     const newComment = [
       ...comments.slice(0, index),
       ...comments.slice(index + 1)
