--- a/09-Dev Tools Domination/index.html
+++ b/09-Dev Tools Domination/index.html
@@ -10,7 +10,7 @@
 
   <script>
     const dogs = [{ name: 'Snickers', age: 2 }, { name: 'hugo', age: 8 }];
-
+    //  attribute modification
     function makeGreen() {
       const p = document.querySelector('p');
       p.style.color = '#BADA55';
@@ -18,29 +18,47 @@
     }
 
     // Regular
-
+     console.log('hello');
     // Interpolated
-
+    console.log('Hello I am a %s string!', '❤️');
+    // console.log(`Hello I am ${var}`);
     // Styled
-
+    // console.log('%c I am some great text', 'font-size: 50px; background: red; text-shadow: 10px 10px 0 blue');
     // warning!
-
+    console.warn('OH NO');
     // Error :|
-
+    console.error('SHOOT');
     // Info
-
+    console.info('Crocodiles eat 3-4 ppoepl per year');
     // Testing
-
+    const p = document.querySelector('p');
+    console.assert(p.classList.contains('ouch'),'That is wrong!');
     // clearing
-
+    console.clear();
     // Viewing DOM Elements
+    console.log(p);
+    console.dir(p);
 
+    console.clear();
     // Grouping together
-
+    dog.forEach(dog => {
+      console.group(`${dog.name}`);
+      console.log(`This is ${dog.name}`);
+      console.log(`${dog.name} is ${dog.age * 7} dog years`);
+      console.groupEnd(`${dog.name}`);
+    });
     // counting
-
+    console.count('wes');
     // timing
-
+    console.time('fetching data');
+    fetch('https://api.github.com/users/wesbos')
+    .then(data => data.json ())
+    .then(data => {
+      console.timeEnd('fetching data');
+      console.log(data);
+    });
+    //table
+    console.table(dogs);
   </script>
 </body>
 </html>
